--- a/pagetemplate.html
+++ b/pagetemplate.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="style.css">
-		<title>rowiki - %%TITLE%%</title>
+		<title>ROPyWiki - %%TITLE%%</title>
 	</head>
 	<body>
 		<header id="navbar">
-			<a href="/" id="navbar-title">rowiki</a><a href="#">navigation bar 2</a>
+			<a href="/" id="navbar-title">ROPyWiki</a><a href="#">navigation bar 2</a>
 		</header>
 		<div id="wrapper" class="toggled">
 			<div id="sidebar-wrapper">
