Added search functionality

--- a/pagetemplate.html
+++ b/pagetemplate.html
@@ -8,35 +8,11 @@
 	</head>
 	<body>
 		<header id="navbar">
-			<a href="/" id="navbar-title">ROPyWiki</a><a href="#">navigation bar 2</a>
+			<a href="/" id="navbar-title">ROPyWiki</a><div><form method="POST" action="/search"><label for="term">Search:</label><input name="term" type="text" /></form></div>
 		</header>
 		<div id="wrapper" class="toggled">
 			<div id="sidebar-wrapper">
 %%TOC%%
-<!--
-				<ul class="sidebar-nav">
-					<li class="sidebar-brand">
-						<a href="#">
-							Gachi Muchi
-						</a>
-					</li>
-					<li>
-						<a href="#">Fisting</a>
-					</li>
-					<li>
-						<a href="#">Is</a>
-					</li>
-					<li>
-						<a href="#">Three</a>
-					</li>
-					<li>
-						<a href="#">Hundred</a>
-					</li>
-					<li>
-						<a href="#">Bucks</a>
-					</li>
-				</ul>
--->
 			</div>
 			<div id="page-content-wrapper">
 				<div class="container-fluid">
